# monorepo

./: README.md
cheats/: ruangguru  skillacademy
cheats/linux/: linux.cheat
config/: .tmux.conf
config/alacritty/: alacritty.yml
config/fish/: config.fish  fishd.faisal-Inspiron-7472
config/fish/functions/: fish_user_key_bindings.fish  fzf_key_bindings.fish
config/i3/: config
config/nvim/: general.vim  init.vim  keybinding.vim  plugin.vim
config/tmux/: .tmux.conf  tmux.conf
dbui/: Cargo.toml
dbui/src/: main.rs
deployment/: docker-compose.yaml  radar.yaml  transmission.yaml
homelab/: .gitignore  docker-compose.yaml
script/: suspend
