[package]
name = "dbui"
version = "0.1.0"
authors = ["faisalburhanudin <faisalburhanudin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.17.4"
tui = { version = "0.9.4", default-features = false, features = ['crossterm'] }
